--- a/package.json
+++ b/package.json
@@ -1,14 +1,18 @@
 {
-  "name": "meta-fornec",
+  "name": "front-meta-fornec",
+  "version": "1.0.0",
   "private": true,
-  "version": "0.0.0",
-  "type": "module",
   "scripts": {
-    "dev": "vite",
+    "dev": "vite --host",
     "build": "vite build",
-    "preview": "vite preview"
+    "serve": "vite preview"
+  },
+  "dependencies": {
+    "aws-amplify": "^5.1.7",
+    "axios": "^1.6.6",
+    "jwt-decode": "^3.1.2"
   },
   "devDependencies": {
-    "vite": "^4.4.5"
+    "vite": "^5.2.0"
   }
 }
